--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,29 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: rgb(231, 224, 224);
+}
+
+html {
+  background-color: rgb(82, 82, 199);
+}
+
+body {
+  display: flex;
+  background-color: rgb(62, 62, 201);
+  margin: 20px;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+}
+
 button {
   cursor: pointer;
+  color: black;
+  background-color: rgb(202, 83, 36);
+  border: none;
+  padding: 30px;
 }
 
 #play-again {
