--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,20 @@ body {
   margin: 20px;
   flex-direction: column;
   align-items: center;
-  gap: 40px;
+  gap: 20px;
+  border-radius: 6px;
+}
+
+h1 {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-family: Helvetica, sans-serif;
+}
+
+#buttons {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
 }
 
 button {
@@ -23,9 +36,27 @@ button {
   color: black;
   background-color: rgb(202, 83, 36);
   border: none;
-  padding: 30px;
+  padding: 35px;
+  border-radius: 6px;
+}
+
+#underheader {
+  font-size: 18px;
 }
 
 #play-again {
   display: none;
+}
+
+#result {
+  text-align: center;
+  margin: 10px;
+}
+
+.win {
+  color: rgb(92, 219, 92);
+}
+
+.lose {
+  color: rgb(248, 88, 88);
 }
