--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ html {
 body {
   display: flex;
   background-color: rgb(62, 62, 201);
+  height: 100%;
   margin: 20px;
   flex-direction: column;
   align-items: center;
@@ -54,11 +55,11 @@ button {
 }
 
 .win {
-  color: rgb(92, 219, 92);
+  color: rgb(143, 230, 143);
 }
 
 .lose {
-  color: rgb(248, 88, 88);
+  color: rgb(206, 125, 125);
 }
 
 #player-choice,
