--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,14 @@
   color: rgb(231, 224, 224);
 }
 
-html {
+body {
   background-color: rgb(82, 82, 199);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-body {
+#game-container {
   display: flex;
   background-color: rgb(62, 62, 201);
   height: 100%;
@@ -18,6 +21,7 @@ body {
   align-items: center;
   gap: 20px;
   border-radius: 6px;
+  padding: 35px;
 }
 
 h1 {
@@ -37,12 +41,13 @@ button {
   color: black;
   background-color: rgb(202, 83, 36);
   border: none;
-  padding: 35px;
+  padding: 40px;
   border-radius: 6px;
 }
 
 #underheader {
   font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #play-again {
@@ -52,6 +57,7 @@ button {
 #result {
   text-align: center;
   margin: 10px;
+  font-family: Verdana, sans-serif;
 }
 
 .win {
@@ -60,6 +66,10 @@ button {
 
 .lose {
   color: rgb(206, 125, 125);
+}
+
+#scores {
+  font-family: Arial, sans-serif;
 }
 
 #player-choice,
